assets/style/index.css
body {
  font-family: "DM Serif Display", serif;
  font-weight: 400;
  font-style: normal;
  background-color: #f4dbd4;
  position: relative;
  max-width: 26rem;
  margin: auto;
}

#content,
#messages {
  max-width: 26rem;
  margin: auto;
  background-color: #ffe6df;
  background-size: 100%;
  background-repeat: repeat;
  min-height: 100vh;
  position: relative;
  border-left: #efbac2 2px solid;
  border-right: #efbac2 2px solid;
}

#content .assets {
  min-height: clamp(500px, 100vh, 778px);
  position: relative;
  overflow: hidden;
}

#content .wave {
  width: 80%;
  z-index: 1000;
  position: absolute;
  top: -25%;
  left: 0%;
}

#content .title {
  width: 100%;
  z-index: 1000;
  position: absolute;
}

#content .flower {
  width: 5%;
  z-index: 1000;
  position: absolute;
}

#content .flower-1 {
  width: 5%;
  top: 53%;
  left: 15%;
}

#content .flower-2 {
  width: 3%;
  top: 45%;
  left: 80%;
}

#content .flower-3 {
  width: 10%;
  top: 60%;
  left: 20%;
}

#content .flower-4 {
  width: 7%;
  top: 50%;
  left: 70%;
}

#content .flower-5 {
  width: 3%;
  top: 73%;
  left: 18%;
}

#content .flower-6 {
  width: 3%;
  top: 60%;
  left: 80%;
}

#content .main-frame {
  width: 60%;
  height: 65vh;
  margin-top: 24vh;
  border-radius: 100em 100em 50px 50px;
  background-color: #efbac2;
}

#content .main-frame .swiper {
  width: 100%;
  height: 100%;
}

#content .main-frame .swiper .ella {
  width: 100%;
}

#content .main-frame .swiper .ella-3 {
  width: 90%;
  left: 0;
}

#content .colors {
  height: 5vh;
  width: 60%;
  margin-left: 20%;
}

#content .color {
  height: 4vh;
  width: 20%;
}

#content .color-1 {
  background-color: #eea5a5;
}

#content .color-2 {
  background-color: #f1d1c7;
}

#content .color-3 {
  background-color: #e0aa8d;
}

#content .color-4 {
  background-color: #4f3326;
}

#content .color-5 {
  background-color: #af7761;
}

/* 
* Messages section
*/
#messages {
  border-top: 0;
  z-index: 1000;
}

#messages .main-frame {
  width: 80%;
  height: 65vh;
  margin-top: 5vh;
  overflow: hidden;
}

#messages .main-frame .messages {
  width: 100%;
  min-height: 100%;
}

#messages .main-frame .card-message {
  height: 50%;
  border-radius: 25px;
}

#messages .wave-2 {
  z-index: -10;
  margin-top: -50vh;
}

.sound-wrapper {
  z-index: 2000;
  right: 0;
  bottom: 0;
  position: fixed;
  margin-right: 26rem;
  margin: 0 1rem 1rem 0;
}

.btn-sound {
  width: 100%;
  border: #000 1px solid;
  border-radius: 500px;
  background-color: #fff6f3;
}

.btn-sound:focus,
.btn-sound:hover {
  border: #000 1px solid;
  background-color: #eee8e7;
}

